fix image overflow

--- a/_sass/jekyll-theme-hacker.scss
+++ b/_sass/jekyll-theme-hacker.scss
@@ -655,7 +655,7 @@ dt {
   font-weight: bold;
 }
 
-#tg-sb-content > img {
+#tg-sb-content p > img {
   display: block;
   margin: 10px 0;
   width: 100%;
